# pimulator

./: .gitignore
src/: CMakeLists.txt  main.cpp
src/addr_mapper/: CMakeLists.txt
src/addr_mapper/impl/: linear_mappers.cpp
src/base/: base.h  request.h
src/dram/: CMakeLists.txt
src/dram/impl/: HBM3.cpp
src/dram/lambdas/: action.h  preq.h
src/dram_controller/: CMakeLists.txt  controller.h
src/dram_controller/impl/: dummy_controller.cpp  generic_dram_controller.cpp
src/dram_controller/impl/scheduler/: generic_scheduler.cpp  pim_scheduler.cpp
src/frontend/: CMakeLists.txt
src/frontend/impl/memory_trace/: loadstore_trace.cpp
src/memory_system/: CMakeLists.txt  memory_system.h
src/memory_system/impl/: dummy_memory_system.cpp  generic_DRAM_system.cpp
trace/: attacc_bank.trace  attacc_bg.trace  compute.trace  io.trace  part_compute.yaml  part_io.yaml
trace_gen/: gen_trace_attacc_bank.py  part_trace_gen.py
